force-app/main/default/objects/SObjectTriggerSetting__mdt/SObjectTriggerSetting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to control which trigger and trigger actions are active</description>
    <label>SObjectTriggerSetting</label>
    <pluralLabel>SObjectTriggerSettings</pluralLabel>
</CustomObject>