force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/Bypass_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Permissions__c</fullName>
    <description>This field is used to store the custom permissions assigned to the users. If this permissions are assigned, trigger won&apos;t be invoked for that user.</description>
    <label>Bypass Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>