force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores the description of the trigger setting</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>