force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to decide whether to activate or deactivate the trigger</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>