force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/Required_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission__c</fullName>
    <description>This field is used to store the custom permissions assigned to the users. If this permissions are assigned, trigger will be invoked only for that particular set of users.</description>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>